--- a/src/components/board.css
+++ b/src/components/board.css
@@ -10,35 +10,14 @@
   border-collapse: collapse;
 }
 
-#winner {
-  margin-top: 25px;
-  width: 168px;
-  text-align: center;
-}
-
 td {
   text-align: center;
   font-weight: bold;
   font-size: 30px;
-  color: #555;
-  width: 75px;
-  height: 75px;
-  line-height: 75px;
-  border: 3px solid #aaa;
-  background: #fff;
-}
-
-td.active {
+  color: #fff;
+  width: 128px;
+  height: 128px;
+  line-height: 0px;
+  border: 1px solid #aaa;
   cursor: pointer;
-  background: #1fc600;
-}
-
-td.forested {
-  cursor: pointer;
-  background: #063b00;
-}
-
-td.deforested {
-  cursor: pointer;
-  background: #654321;
 }
